physx-sys/pxbind/tests/snapshots/records__ptr_only-3.snap
---
source: physx-sys/pxbind/tests/records.rs
expression: ro.rust_decls
---

#[derive(Clone, Copy)]
#[repr(C)]
pub struct PxAllocatorCallback {
    vtable_: *const std::ffi::c_void,
}

#[derive(Copy, Clone)]
#[repr(C)]
pub struct MemoryBuffer {
_unused: [u8; 0],
}
