physx-sys/pxbind/tests/snapshots/records__ref_fields.snap
---
source: physx-sys/pxbind/tests/records.rs
expression: ro.structgen
---
// Automatically generated by pxbind
#include "PxPhysicsAPI.h"

using namespace physx;

#define unsafe_offsetof(st, m) ((size_t) ( (char *)&((st *)(0))->m - (char *)0 ))
#include "structgen.hpp"

int main() {
    PodStructGen sg;
    struct physx_SupportLocal_Pod: public physx::SupportLocal {
        static void dump_layout(PodStructGen& sg) {
            sg.begin_struct("physx_SupportLocal_Pod", "SupportLocal");
            sg.add_field("physx::Vec3V shapeSpaceCenterOfMass", "shapeSpaceCenterOfMass", "glam::Vec3A", sizeof(physx::Vec3V), unsafe_offsetof(physx_SupportLocal_Pod, shapeSpaceCenterOfMass);
            sg.add_field("bool isIdentityScale", "isIdentityScale", "bool", sizeof(bool), unsafe_offsetof(physx_SupportLocal_Pod, isIdentityScale);
            sg.end_struct(sizeof(physx::SupportLocal));
        }
    };
    physx_SupportLocal_Pod::dump_layout(sg);

    sg.finish();
}

